# InsightBoard

./: .gitignore  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  publish.yaml
dev/: README.md  app.py  build_app.sh
docs/: conf.py  index.md  requirements.txt
docs/advanced/: branding.md
docs/getting_started/: index.md
docs/projects/: creating-a-project.md  importing-projects.md  index.md
docs/projects/components/: parsers.md  reports.md  schemas.md
docs/usage/: index.md
projects/: .gitignore
projects/MyProject1/data/: .gitignore
projects/MyProject1/parsers/: native.py  parser1.py
projects/MyProject1/reports/: report1.py  report2.py  report3.py
src/InsightBoard/: __init__.py  __main__.py  app.py  index.py  utils.py
src/InsightBoard/chatbot/: __init__.py  callbacks.py  datachat.py  dc_base.py  dc_google.py  dc_openai.py  layout.py  prompts.py  state.py
src/InsightBoard/config/: __init__.py  config.py
src/InsightBoard/database/: __init__.py  database.py  db_base.py  db_duckdb.py  db_parquet.py  db_sql.py  db_sqlite.py
src/InsightBoard/pages/: data.py  home.py  new_parser.py  reports.py  settings.py  upload.py
src/InsightBoard/parsers/: __init__.py  autoparser.py
src/InsightBoard/project/: __init__.py  project.py
tests/: test_config.py  test_database.py  test_database_parquet.py  test_parsers.py  test_project.py  test_utils.py
tests/pages/: test_upload.py
tests/system/: test_e2e.py  utils.py
tests/system/InsightBoard/projects/sample_project/data/: sample_data_source1.csv
tests/system/InsightBoard/projects/sample_project/parsers/: adtl-source1.py
tests/system/InsightBoard/projects/sample_project/parsers/adtl/: source1.toml
tests/system/InsightBoard/projects/sample_project/schemas/: linelist.schema.json
tests/unit/: test_config.py  test_database_parquet.py  test_insightboard.py  test_parsers.py  test_project.py  test_utils.py
tests/unit/pages/: test_upload.py
